# P11-AddAFeature

./: .coverage  .env-local  .gitignore  .mergify.yml  .travis-env  .travis.yml  deploy.sh  env-example  manage.py  package.json  pyproject.toml  readme.md  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
config/: urls.py  views.py
config/settings/: base.py  ci.py  local.py  production.py  travis.py
homepage/: urls.py
openfoodfacts/: api.py  feed_db.py
openfoodfacts/management/commands/: init_db.py
product/: urls.py  views.py
product/migrations/: 0015_auto_20201101_1950.py
product/models/: __init__.py  category.py  product.py
product/templates/product/: sheet.html
product/templates/product/emails/: _nutriment.html  sheet.mjml  sheet_text.html
report/: Presentation.md
report/P11_Ojardias_Guillaume/: P11_01_Emails_reponse_1.md  P11_01_Emails_reponse_2.md  P11_02_Emails_reponse_2.md  P11_03_Emails_reponse_3.md  P11_06_report.md
search/: urls.py
static/: package-lock.json  package.json
templates/: 405.html
templates/emails/: sheet.mjml
tests/openfoodfacts/: test_api.py  test_feed_db.py
tests/product/: test_category_models.py  test_product_models.py  test_views.py
users/: forms.py
users/migrations/: 0004_auto_20200721_1826.py
