[tool.poetry]
name = "pur_peurre"
version = "0.2.0"
description = ""
authors = ["GuillaumeO <7831777+GuillaumeOj@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
whitenoise = "^5.1.0"
psycopg2 = "^2.8.5"
django = "^3.0.8"
requests = "^2.25.1"
python-dotenv = "^0.14.0"
progress = "^1.5"
sentry-sdk = "^0.17.8"
sendgrid = "^6.4.7"
django-mjml = "^0.10.2"

[tool.black]
target-version = ["py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

