[tool.poetry]
name = "pur_peurre"
version = "0.2.0"
description = ""
authors = ["GuillaumeO <7831777+GuillaumeOj@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
whitenoise = "^5.1.0"
psycopg2 = "^2.8.5"
django = "^3.1.10"
requests = "^2.25.1"
python-dotenv = "^0.17.1"
progress = "^1.5"
sentry-sdk = "^1.1.0"
sendgrid = "^6.7.0"
django-mjml = "^0.10.2"

[tool.black]
target-version = ["py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

